# carpet_localisation_ros

./: CMakeLists.txt  README.md  dependencies.repos  package.xml  requirements.txt  workspace.repos
cfg/: carpet_cam.gpfl  carpet_localisation.rviz  office_gmm_params.json  office_map.csv  office_map.xlsx
gazebo/carpet_world_gmm_model/: README.md  gmm_params.json
gazebo/joy_config/: joy_config.yaml
gazebo/models/carpet/: model.config  model.sdf
gazebo/models/carpet/materials/scripts/: carpet.material
gazebo/urdf/: README.md  carpet_bot.urdf.xacro
gazebo/worlds/: carpet_world.sdf
launch/: carpet_simulation.launch  image_saver.launch  rviz.launch
launch/include/: bag_playback.launch  carpet_world.launch  carpet_world_localisation.launch  gz_carpet_bot_teleop.launch  office_localisation.launch
msg/: CarpetColor.msg
scripts/: carpet_color_classifier.py  carpet_localiser.py  odom_to_tf.py
