<?xml version="1.0"?>
<package format="2">
  <name>carpet_localisation</name>
  <version>0.0.0</version>
  <description>The carpet_localisation package</description>
  <maintainer email="tim@todo.todo">tim</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_virtualenv</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>create_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/gazebo/models" />
    <gazebo_ros gazebo_media_path="${prefix}/gazebo/models" />
    <gazebo_ros gazebo_resource_path="${prefix}/gazebo" />
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
